--- a/p_sp5.html
+++ b/p_sp5.html
@@ -113,6 +113,10 @@
                             <li>節點</li>
                         </ul>
                     </div>
+                    <!-- 計時器 -->
+                    <div class="timer">
+                        目前尚未完成預約，自動登出<span>14:59</span>
+                    </div>
                     <div class="white_zone">
                         <div class="step-num">04</div>
                         <h2 class="title">網路填表</h2>
@@ -125,9 +129,9 @@
                         <section class="">
                             <!-- 儀表板 -->
                             <p class="note">目前預約人數設定為<b class="R">4</b>筆申請人，請依序填寫申請人資料與上傳照片</p>
-                            <div class="btn_grp">
+                            <!-- <div class="btn_grp">
                                 <button class="btn btn-preview">確認所有申請人已填寫完成，進行資料預覽</button>
-                            </div>
+                            </div> -->
                             <div class="ID_cards">
                                 <div class="col complete">
                                     <div class="state">填表狀態：已完成</div>
@@ -212,8 +216,13 @@
                                     <b><span><img src="images/icon/icon_add3.svg" alt=""></span>增加名額</b>
                                 </div>
                             </div>
-                            <div class="btn_grp">
+                            <!-- <div class="btn_grp">
                                 <button class="btn btn-preview">確認所有申請人已填寫完成，進行資料預覽</button>
+                            </div> -->
+                            <div class="btn_grp">
+                                <button class="btn btn-reset">取消預約</button>
+                                <button type="button" class="btn btn-secondary">新增名額及修改日期</button>
+                                <button type="button" class="btn btn-primary">暫存資料</button>
                             </div>
                         </section>
                         <!-- End -->
