--- a/p_sp4.html
+++ b/p_sp4.html
@@ -142,9 +142,9 @@
                                 <div class="flex-form form-column">
                                     <div class="form_grp">
                                         <div class="flex-col-equal-1">
-                                            <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>不懂為何要這樣搞的預約人數：</label>
+                                            <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>謎樣的預約人數：</label>
                                             <div class="form_content form_inline">
-                                                <button type="button" class="btn btn-reduce">減少人數</button>
+                                                <button type="button" class="btn btn-reduce disable">減少人數</button>
                                                 <input name="text" type="text" value="1" placeholder="一般狀態" readonly>
                                                 <button type="button" class="btn btn-increase">增加人數</button>
                                             </div>
