--- a/p_sp4.html
+++ b/p_sp4.html
@@ -461,7 +461,7 @@
                                             </div>
                                         </div>
                                         <div class="time_period">
-                                            <b>您的預約日期：2023/10/12</b>
+                                            <b>您選擇的日期：2023/10/12</b>
                                             <div class="AM">
                                                 <h3>上午時段</h3>
                                                 <div class="part">
