--- a/p_sp4.html
+++ b/p_sp4.html
@@ -456,7 +456,7 @@
                                                 </div>
                                             </div>
                                             <div class="tips">
-                                                <b class="ordering">預約中</b>
+                                                <b class="ordering">選擇中</b>
                                                 <b class="ordered">已預約</b>
                                             </div>
                                         </div>
