--- a/index.htm
+++ b/index.htm
@@ -98,6 +98,11 @@
                     </tr>
                     <tr>
                         <td></td>
+                        <td>登入頁 - 旅行社 show QR code</td>
+                        <td><a href="login-qrcode.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>登入頁 - 個人</td>
                         <td><a href="p_login.htm" target="_blank"></a></td>
                     </tr>
