--- a/login-qrcode.htm
+++ b/login-qrcode.htm
@@ -219,61 +219,30 @@
                             <h3>請選擇驗證方式：</h3>
                             <div class="verify">
                                 <div class="col goPIN">
-                                    <h4 class="verifyTitle">自然人憑證（插卡驗證）</h4>
-                                    <!-- 自然人憑證 -->
-                                    <div class="pin_panel">
-                                        <form action="">
-                                            <div class="flex-form">
-                                                <div class="form_grp">
-                                                    <label for="username" class="form_title">憑證PIN碼</label>
-                                                    <div class="form_content">
-                                                        <input name="username" type="text" placeholder="請輸入憑證PIN碼">
-                                                    </div>
-                                                </div>
-                                                <div class="btn_grp">
-                                                    <input name="" type="submit" value="登入" class="btn btn-submit">
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <!-- 說明事項 -->
-                                        <div class="tips">
-                                            <!-- <h3 class="tips_title"><span>說明事項</span></h3> -->
-                                            <ol>
-                                                <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">CGServiSign(環境自我檢測)</a>，才能使用憑證登入</li>
-                                                <li>系統環境設定完成，請將您的自然人憑證插入讀卡機後，輸入憑證PIN碼進行登入。</li>
-                                            </ol>
-                                        </div>
-                                    </div>
+                                  <a href="login.htm" class="verifyTitle">自然人憑證（插卡驗證）</a>
                                 </div>
                                 <div class="col goID">
-                                    <h4 class="verifyTitle">行動自然人憑證（免插卡驗證）</h4>
-                                    <!-- 行動自然人憑證 -->
-                                    <div class="pin_panel">
-                                        <form action="">
-                                            <div class="flex-form">
-                                                <div class="form_grp">
-                                                    <label for="username" class="form_title">輸入身分證字號</label>
-                                                    <div class="form_content labelEffect password_toggle">
-                                                        <input name="password" type="password" placeholder="請輸入身分證字號" value="1234">
-                                                        <button type="button" class="btn btn-icon"><i class="i_hide"></i></button>
-                                                    </div>
-                                                </div>
-                                                <div class="btn_grp">
-                                                    <input name="" type="submit" value="產生QRcode" class="btn btn-submit2">
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <!-- 說明事項 -->
-                                        <div class="tips">
-                                            <!-- <h3 class="tips_title"><span>移民署宣導事項</span></h3> -->
-                                            <b class="R">試辦預計自112.11.6 - 112.12.4</b>
-                                            <ol>
-                                                <li>初次使用行動自然人憑證，請先下載 <a href="#">行動自然人憑證APP，並至內政部行動自然人憑證網站</a>完成註冊及綁定作業。</li>
-                                                <li>使用行動自然人憑證若有登入問題，請撥打內政部行動自然人憑證服務專線：0800-080-117</li>
-                                            </ol>
-                                        </div>
-                                    </div>
+                                  <h4 class="verifyTitle">行動自然人憑證（免插卡驗證）</h4>
                                 </div>
+                            </div>
+                            <div class="styleBox">
+                              <b class="innerTitle">請掃描 / 點擊您的行動自然人憑證驗證QRcode</b>
+                              <div class="qrcode">
+                                  <div class="img-container"><img src="images/QRcode.png" class="contain" alt="外交部領事事務局護照預約申請"></div>
+                                  <div class="btn_grp">
+                                      <b>驗證QRcode有效時間：04:59</b>
+                                      <button class="btn btn-normal">取消驗證</button>
+                                      <button class="btn btn-normal">重新產生QRcode</button>
+                                  </div>
+                              </div>
+                              <!-- 說明事項 -->
+                              <div class="tips">
+                                  <h3 class="tips_title"><span>說明事項</span></h3>
+                                  <ol>
+                                      <li>初次使用行動自然人憑證，請先下載 <a href="#">行動自然人憑證APP，並至內政部行動自然人憑證網站</a>完成註冊及綁定作業。</li>
+                                      <li>使用行動自然人憑證若有登入問題，請撥打內政部行動自然人憑證服務專線：0800-080-117</li>
+                                  </ol>
+                              </div>
                             </div>
                             <!-- 說明事項 -->
                             <div class="tips">
