自然人憑證改連結、補 checkbox disabled

--- a/p_sp.html
+++ b/p_sp.html
@@ -140,7 +140,8 @@
                                     <li>項目2</li>
                                 </ul> -->
                                 <div class="check_grp">
-                                    <label><input name="checkSample" type="checkbox" value="">本人已詳閱瞭解並同意遵守相關規範。</label>
+                                    <label><input name="checkSample" type="checkbox" value="" checked>本人已詳閱瞭解並同意遵守相關規範。</label>
+                                    <label><input name="checkSample" type="checkbox" value="" checked disabled>本人已詳閱瞭解並同意遵守相關規範。</label>
                                 </div>
                             </div>
                             <div class="flex-form form-column">
