--- a/login-qrcode.htm
+++ b/login-qrcode.htm
@@ -219,30 +219,31 @@
                             <h3>請選擇驗證方式：</h3>
                             <div class="verify">
                                 <div class="col goPIN">
-                                  <a href="login.htm" class="verifyTitle">自然人憑證（插卡驗證）</a>
+                                    <a href="login.htm" class="verifyTitle">自然人憑證（插卡驗證）</a>
                                 </div>
                                 <div class="col goID">
-                                  <h4 class="verifyTitle">行動自然人憑證（免插卡驗證）</h4>
+                                    <a href="login.htm" class="verifyTitle">行動自然人憑證（免插卡驗證）</a>
+                                    <!-- <h4 class="verifyTitle">行動自然人憑證（免插卡驗證）</h4> -->
                                 </div>
                             </div>
                             <div class="styleBox">
-                              <b class="innerTitle">請掃描 / 點擊您的行動自然人憑證驗證QRcode</b>
-                              <div class="qrcode">
-                                  <div class="img-container"><img src="images/QRcode.png" class="contain" alt="外交部領事事務局護照預約申請"></div>
-                                  <div class="btn_grp">
-                                      <b>驗證QRcode有效時間：04:59</b>
-                                      <button class="btn btn-normal">取消驗證</button>
-                                      <button class="btn btn-normal">重新產生QRcode</button>
-                                  </div>
-                              </div>
-                              <!-- 說明事項 -->
-                              <div class="tips">
-                                  <h3 class="tips_title"><span>說明事項</span></h3>
-                                  <ol>
-                                      <li>初次使用行動自然人憑證，請先下載 <a href="#">行動自然人憑證APP，並至內政部行動自然人憑證網站</a>完成註冊及綁定作業。</li>
-                                      <li>使用行動自然人憑證若有登入問題，請撥打內政部行動自然人憑證服務專線：0800-080-117</li>
-                                  </ol>
-                              </div>
+                                <b class="innerTitle">請掃描 / 點擊您的行動自然人憑證驗證QRcode</b>
+                                <div class="qrcode">
+                                    <div class="img-container"><img src="images/QRcode.png" class="contain" alt="外交部領事事務局護照預約申請"></div>
+                                    <div class="btn_grp">
+                                        <b>驗證QRcode有效時間：04:59</b>
+                                        <button class="btn btn-normal">取消驗證</button>
+                                        <button class="btn btn-normal">重新產生QRcode</button>
+                                    </div>
+                                </div>
+                                <!-- 說明事項 -->
+                                <div class="tips">
+                                    <h3 class="tips_title"><span>說明事項</span></h3>
+                                    <ol>
+                                    <li>初次使用行動自然人憑證，請先下載 <a href="#">行動自然人憑證APP，並至內政部行動自然人憑證網站</a>完成註冊及綁定作業。</li>
+                                    <li>使用行動自然人憑證若有登入問題，請撥打內政部行動自然人憑證服務專線：0800-080-117</li>
+                                    </ol>
+                                </div>
                             </div>
                             <!-- 說明事項 -->
                             <div class="tips">
