新增訊息提醒的重寄email 連結樣式

--- a/form.htm
+++ b/form.htm
@@ -1029,7 +1029,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="notice_info">請參考<a href="#">外文姓名譯音系統</a>，限輸入英文及符號「－」、「．」，建議外文姓氏與直系血親或兄弟姐妹拼法相同。外文姓名拼音如非中文姓名國家語言讀音音譯，請提供證明文件。</div>
+                                                <div class="notice_info">請參考<a href="#">外文姓名譯音系統</a>，限輸入英文及符號「－」、「．」，建議外文姓氏與直系血親或兄弟姐妹拼法相同。外文姓名拼音如非中文姓名國家語言讀音音譯，請提供證明文件。<a href="#" class="remail">重寄e-mail</a></div>
                                             </div>
                                         </div>
                                     </div>
