--- a/p_sp5.html
+++ b/p_sp5.html
@@ -134,10 +134,11 @@
                             </div> -->
                             <div class="ID_cards">
                                 <div class="col complete">
-                                    <div class="state">填表狀態：已完成</div>
+                                    <div class="state">填表已完成</div>
                                     <div class="ID_info">
                                         <div class="content">
                                             <b>申請人 1</b>
+                                            <span class="note">已完成</span>
                                             <ul>
                                                 <li>張大毛</li>
                                                 <li>A1234556789</li>
@@ -154,10 +155,11 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="state">填表狀態：未完成</div>
+                                    <div class="state">填表未完成</div>
                                     <div class="ID_info">
                                         <div class="content">
                                             <b>申請人 2</b>
+                                            <span class="note">未完成</span>
                                             <ul>
                                                 <li>請填寫內容</li>
                                             </ul>
@@ -177,6 +179,7 @@
                                     <div class="ID_info">
                                         <div class="content">
                                             <b>申請人 3</b>
+                                            <!-- <span class="note">已完成</span> -->
                                             <ul>
                                                 <li>張三毛</li>
                                                 <li>A1234556789</li>
@@ -198,6 +201,7 @@
                                     <div class="ID_info">
                                         <div class="content">
                                             <b>申請人 4</b>
+                                            <!-- <span class="note">未完成</span> -->
                                             <ul>
                                                 <li>請填寫內容</li>
                                             </ul>
