新增 p_sp5 按鈕排序

--- a/p_sp5.html
+++ b/p_sp5.html
@@ -132,6 +132,59 @@
                             <!-- <div class="btn_grp">
                                 <button class="btn btn-preview">確認所有申請人已填寫完成，進行資料預覽</button>
                             </div> -->
+                            <!-- 修改：ID_cards Revise -->
+                            ID_cards Revise 按鈕排序不同
+                            <div class="ID_cards Revise">
+                                <div class="col complete">
+                                    <!-- <div class="state">填表已完成</div> -->
+                                    <div class="ID_info">
+                                        <div class="content">
+                                            <b>申請人 1（修改）</b>
+                                            <ul>
+                                                <li>張大毛</li>
+                                                <li>A1234556789</li>
+                                                <li>050/01/01</li>
+                                            </ul>
+                                            <!-- <span class="note">已完成</span> -->
+                                        </div>
+                                        <div class="foto passed">
+                                            <span>已上傳照片</span>
+                                            <img src="images/foto-pass.jpg" alt="張大毛">
+                                        </div>
+                                    </div>
+                                    <div class="btn_grp">
+                                        <button type="button" class="btn btn-primary">修改照片</button>
+                                        <button type="button" class="btn btn-primary">修改基本資料</button>
+                                        <button type="button" class="btn btn-primary">修改預約日期或送件地點</button>
+                                        <button type="button" class="btn btn-primary">取消預約</button>
+                                    </div>
+                                </div>
+                                <div class="col complete">
+                                    <!-- <div class="state">填表已完成</div> -->
+                                    <div class="ID_info">
+                                        <div class="content">
+                                            <b>申請人 1（修改）</b>
+                                            <ul>
+                                                <li>張大毛</li>
+                                                <li>A1234556789</li>
+                                                <li>050/01/01</li>
+                                            </ul>
+                                            <!-- <span class="note">已完成</span> -->
+                                        </div>
+                                        <div class="foto passed">
+                                            <span>已上傳照片</span>
+                                            <img src="images/foto-pass.jpg" alt="張大毛">
+                                        </div>
+                                    </div>
+                                    <div class="btn_grp">
+                                        <button type="button" class="btn btn-primary">1-修改照片</button>
+                                        <button type="button" class="btn btn-primary">2-修改資料</button>
+                                        <button type="button" class="btn btn-primary">3-取消預約並刪除資料</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--  -->
+                            ID_cards
                             <div class="ID_cards">
                                 <div class="col complete">
                                     <div class="state">填表已完成</div>
