新增checkbox、p_sp5 卡片按鈕

--- a/p_process.html
+++ b/p_process.html
@@ -141,19 +141,19 @@
                                         <section>
                                             <span class="num">01</span>
                                             <h4>簽署個資聲明
-                                                <span>同意個資聲明</span>
+                                                <span><b class="R">紅字</b>同意個資聲明<b class="R">紅字</b></span>
                                             </h4>
                                         </section>
                                         <section>
                                             <span class="num">02</span>
                                             <h4>身分認證
-                                                <span>輸入身分證字號、電子郵件</span>
+                                                <span><b class="B">藍字</b>輸入身分證字號、電子郵件<b class="B">藍字</b></span>
                                             </h4>
                                         </section>
                                         <section>
                                             <span class="num">03</span>
                                             <h4>申辦方式
-                                                <span>選擇送件地點及預約申辦日期</span>
+                                                <span><a href="#">超連結</a>選擇送件地點及預約申辦日期<a href="#">超連結</a></span>
                                             </h4>
                                         </section>
                                         <section>
