--- a/p_sp5.html
+++ b/p_sp5.html
@@ -155,8 +155,8 @@
                                     <div class="btn_grp">
                                         <button type="button" class="btn btn-primary">修改照片</button>
                                         <button type="button" class="btn btn-primary">修改基本資料</button>
-                                        <button type="button" class="btn btn-primary">修改預約日期或送件地點</button>
                                         <button type="button" class="btn btn-primary">取消預約</button>
+                                        <button type="button" class="btn btn-primary _stretch">修改預約日期或送件地點</button>
                                     </div>
                                 </div>
                                 <div class="col complete">
@@ -177,9 +177,9 @@
                                         </div>
                                     </div>
                                     <div class="btn_grp">
-                                        <button type="button" class="btn btn-primary">1-修改照片</button>
-                                        <button type="button" class="btn btn-primary">2-修改資料</button>
-                                        <button type="button" class="btn btn-primary">3-取消預約並刪除資料</button>
+                                        <button type="button" class="btn btn-primary">修改照片</button>
+                                        <button type="button" class="btn btn-primary">修改資料</button>
+                                        <button type="button" class="btn btn-primary">取消預約</button>
                                     </div>
                                 </div>
                             </div>
