--- a/lp.htm
+++ b/lp.htm
@@ -117,6 +117,9 @@
                         <h2 class="title">簡表資料填寫</h2>
                         <h3 class="subtitle"><span>請再次確認輸入資料</span></h3>
                         <h3 class="subtitle warn"><span>您上傳的照片未能通過檢核</span></h3>
+                        <div class="check_grp">
+                            <label><input name="checkSample" type="checkbox" value="">我已經詳讀以上表單內容</label>
+                        </div>
                         <!-- Start -->
                         <section class="">
                             <!-- 說明事項 -->
