--- a/p_sp2.html
+++ b/p_sp2.html
@@ -120,168 +120,171 @@
                         <div class="step-flow">
                             <span class="belt" style="width: 70%;"></span>
                         </div>
+                        <div class="check_grp">
+                            <label><input name="checkSample" type="checkbox" value="">我已經詳讀以上表單內容</label>
+                        </div>
                         <!-- Start -->
                         <section class="">
-                          <div class="info-review">
-                            <!-- 1 -->
-                            <b class="applicant">申請人 1：張大毛</b>
-                            <div class="cardInfo">
-                              <!-- 說明事項 -->
-                              <div class="caption">
-                                  <h3 class="title"><span>說明事項</span></h3>
-                                  <ul>
-                                      <li>您已成功網路預約申辦護照時間且系統已發送預約成功通知信至您的電子郵件信箱。此預約為當天有效，請務必於預約時間內辦理報到，以免影響您的權益</li>
-                                      <li>為確保國人旅外通關之便利，申請人數位照片雖已上傳成功，如果上傳的照片於臨櫃遞件時，經再次審查不符「晶片護照照片規格」相關規定，或經外交部領事事務局及四個辦事處護製系統處理後如影像品質未達國際民航組織標準或上傳不合格照片(例如：使用非6個月內近照等等…)不合格情形，仍可能再請護照申請人重新繳交合格的照片。</li>
-                                      <li>申辦過程中，請留意您的電話及電子信箱，以免漏接收申請案件之補正訊息通知，致您的權益受損。</li>
-                                      <li>如果申請人上網填寫的資料或上傳的照片有更改，請務必重新列印簡表，倘誤用舊簡表，因資料已遭覆蓋，外交部領事事務局及四個辦事處將無法帶出正確的數位照片及資料檔案，故無法受理您的申請。</li>
-                                  </ul>
-                              </div>
-                              <div>
-                                  <h3 class="table_title">以下為您的預約資料：建議將此頁列印參考，以便辦理報到</h3>
-                                  <table class="table_box">
-                                      <tr>
-                                          <th>報到時段</th>
-                                          <td>
-                                              2021年10月26日(星期二) 12:00-12:30<br>
-                                              <b class="R">此為您的報到時間，當日需視現場人數報到情況，依序辦理申請案件</b>
-                                          </td>
-                                      </tr>
-                                      <tr>
-                                          <th>送件地點</th>
-                                          <td>
-                                              外交部領事事務局（100219臺北市中正區濟南路一段2之2號1樓）<br>
-                                              ＊網路預約申辦護照者，請先至1樓大廳後方之第①號公共事務機（KIOSK）報到、取號後，再搭乘電扶梯至3樓大廳送件。
-                                          </td>
-                                      </tr>
-                                      <tr>
-                                          <th>護照申請人</th>
-                                          <td>王O明</td>
-                                      </tr>
-                                      <tr>
-                                          <th>辦理方式</th>
-                                          <td>親自辦理</td>
-                                      </tr>
-                                  </table>
+                            <div class="info-review">
+                                <!-- 1 -->
+                                <b class="applicant">申請人 1：張大毛</b>
+                                <div class="cardInfo">
+                                <!-- 說明事項 -->
+                                <div class="caption">
+                                    <h3 class="title"><span>說明事項</span></h3>
+                                    <ul>
+                                        <li>您已成功網路預約申辦護照時間且系統已發送預約成功通知信至您的電子郵件信箱。此預約為當天有效，請務必於預約時間內辦理報到，以免影響您的權益</li>
+                                        <li>為確保國人旅外通關之便利，申請人數位照片雖已上傳成功，如果上傳的照片於臨櫃遞件時，經再次審查不符「晶片護照照片規格」相關規定，或經外交部領事事務局及四個辦事處護製系統處理後如影像品質未達國際民航組織標準或上傳不合格照片(例如：使用非6個月內近照等等…)不合格情形，仍可能再請護照申請人重新繳交合格的照片。</li>
+                                        <li>申辦過程中，請留意您的電話及電子信箱，以免漏接收申請案件之補正訊息通知，致您的權益受損。</li>
+                                        <li>如果申請人上網填寫的資料或上傳的照片有更改，請務必重新列印簡表，倘誤用舊簡表，因資料已遭覆蓋，外交部領事事務局及四個辦事處將無法帶出正確的數位照片及資料檔案，故無法受理您的申請。</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <h3 class="table_title">以下為您的預約資料：建議將此頁列印參考，以便辦理報到</h3>
+                                    <table class="table_box">
+                                        <tr>
+                                            <th>報到時段</th>
+                                            <td>
+                                                2021年10月26日(星期二) 12:00-12:30<br>
+                                                <b class="R">此為您的報到時間，當日需視現場人數報到情況，依序辦理申請案件</b>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th>送件地點</th>
+                                            <td>
+                                                外交部領事事務局（100219臺北市中正區濟南路一段2之2號1樓）<br>
+                                                ＊網路預約申辦護照者，請先至1樓大廳後方之第①號公共事務機（KIOSK）報到、取號後，再搭乘電扶梯至3樓大廳送件。
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th>護照申請人</th>
+                                            <td>王O明</td>
+                                        </tr>
+                                        <tr>
+                                            <th>辦理方式</th>
+                                            <td>親自辦理</td>
+                                        </tr>
+                                    </table>
 
-                                  <h3 class="table_title">報到時請攜帶以下資料</h3>
-                                  <table class="table_box">
-                                      <tr>
-                                          <th>※</th>
-                                          <td>新式國民身分證正本（未成年人或受監護宣告之人尚須攜帶其法定代理人之新式國民身分證正本）</td>
-                                      </tr>
-                                      <tr>
-                                          <th>※</th>
-                                          <td>白底彩色照片2張：須為最近6個月內拍攝之照片（直4.5公分且橫3.5公分，頭到下巴3.2公分），其他請參閱晶片護照相片規格</td>
-                                      </tr>
-                                      <tr>
-                                          <th>※</th>
-                                          <td>列印填妥之簡式護照資料表正本（已隨本確認信以附加檔案方式寄至您的電子郵件信箱）</td>
-                                      </tr>
-                                      <tr>
-                                          <th>※</th>
-                                          <td>變更護照外文姓名/外文別名，須繳付證明文件</td>
-                                      </tr>
-                                      <tr>
-                                          <th>※</th>
-                                          <td>尚有效期之舊護照</td>
-                                      </tr>
-                                  </table>
+                                    <h3 class="table_title">報到時請攜帶以下資料</h3>
+                                    <table class="table_box">
+                                        <tr>
+                                            <th>※</th>
+                                            <td>新式國民身分證正本（未成年人或受監護宣告之人尚須攜帶其法定代理人之新式國民身分證正本）</td>
+                                        </tr>
+                                        <tr>
+                                            <th>※</th>
+                                            <td>白底彩色照片2張：須為最近6個月內拍攝之照片（直4.5公分且橫3.5公分，頭到下巴3.2公分），其他請參閱晶片護照相片規格</td>
+                                        </tr>
+                                        <tr>
+                                            <th>※</th>
+                                            <td>列印填妥之簡式護照資料表正本（已隨本確認信以附加檔案方式寄至您的電子郵件信箱）</td>
+                                        </tr>
+                                        <tr>
+                                            <th>※</th>
+                                            <td>變更護照外文姓名/外文別名，須繳付證明文件</td>
+                                        </tr>
+                                        <tr>
+                                            <th>※</th>
+                                            <td>尚有效期之舊護照</td>
+                                        </tr>
+                                    </table>
 
-                                  <h3 class="table_title">報到時請詳閱以下須知，並備妥應備文件</h3>
-                                  <table class="table_box">
-                                      <tr>
-                                          <th>※</th>
-                                          <td><a href="#" target="_blank">在臺有戶籍國民在國內首次申請普通護照說明書</a></td>
-                                      </tr>
-                                      <tr>
-                                          <th>※</th>
-                                          <td><a href="#" target="_blank">國內申辦護照相關資訊</a></td>
-                                      </tr>
-                                      <tr>
-                                          <th>※</th>
-                                          <td><a href="#" target="_blank">晶片護照相片規格</a></td>
-                                      </tr>
-                                      <tr>
-                                          <th>※</th>
-                                          <td>晶片護照相片範例<br>
-                                              <img src="images/foto-sample.png" alt="" class="" style="height: 420px;">
-                                          </td>
-                                      </tr>
-                                  </table>
+                                    <h3 class="table_title">報到時請詳閱以下須知，並備妥應備文件</h3>
+                                    <table class="table_box">
+                                        <tr>
+                                            <th>※</th>
+                                            <td><a href="#" target="_blank">在臺有戶籍國民在國內首次申請普通護照說明書</a></td>
+                                        </tr>
+                                        <tr>
+                                            <th>※</th>
+                                            <td><a href="#" target="_blank">國內申辦護照相關資訊</a></td>
+                                        </tr>
+                                        <tr>
+                                            <th>※</th>
+                                            <td><a href="#" target="_blank">晶片護照相片規格</a></td>
+                                        </tr>
+                                        <tr>
+                                            <th>※</th>
+                                            <td>晶片護照相片範例<br>
+                                                <img src="images/foto-sample.png" alt="" class="" style="height: 420px;">
+                                            </td>
+                                        </tr>
+                                    </table>
 
-                                  <h3 class="table_title">外交部領事事務局局本部</h3>
-                                  <table class="table_box">
-                                      <tr>
-                                          <th>地址</th>
-                                          <td>100219臺北市中正區濟南路一段2之2號1樓<br>
-                                          ＊網路預約申辦護照者，請先至1樓大廳後方之第①號公共事務機（KIOSK）報到、取號後，再搭乘電扶梯至3樓大廳送件。</td>
-                                      </tr>
-                                      <tr>
-                                          <th>電話</th>
-                                          <td>02-23432888</td>
-                                      </tr>
-                                      <tr>
-                                          <th>地圖</th>
-                                          <td><a href="#" target="_blank">GoogleMap</a></td>
-                                      </tr>
-                                      <tr>
-                                          <th>相關地址資訊</th>
-                                          <td>
-                                              <ul>
-                                                  <li><a href="#" target="_blank">外交部領事事務局</a></li>
-                                                  <li><a href="#" target="_blank">外交部中部辦事處</a></li>
-                                                  <li><a href="#" target="_blank">外交部雲嘉南辦事處</a></li>
-                                              </ul>
-                                          </td>
-                                      </tr>
-                                  </table>
-                              </div>
+                                    <h3 class="table_title">外交部領事事務局局本部</h3>
+                                    <table class="table_box">
+                                        <tr>
+                                            <th>地址</th>
+                                            <td>100219臺北市中正區濟南路一段2之2號1樓<br>
+                                            ＊網路預約申辦護照者，請先至1樓大廳後方之第①號公共事務機（KIOSK）報到、取號後，再搭乘電扶梯至3樓大廳送件。</td>
+                                        </tr>
+                                        <tr>
+                                            <th>電話</th>
+                                            <td>02-23432888</td>
+                                        </tr>
+                                        <tr>
+                                            <th>地圖</th>
+                                            <td><a href="#" target="_blank">GoogleMap</a></td>
+                                        </tr>
+                                        <tr>
+                                            <th>相關地址資訊</th>
+                                            <td>
+                                                <ul>
+                                                    <li><a href="#" target="_blank">外交部領事事務局</a></li>
+                                                    <li><a href="#" target="_blank">外交部中部辦事處</a></li>
+                                                    <li><a href="#" target="_blank">外交部雲嘉南辦事處</a></li>
+                                                </ul>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                </div>
+                                <!-- 2 -->
+                                <b class="applicant">申請人 2：張二毛</b>
+                                <div class="cardInfo">
+                                <!-- 說明事項 -->
+                                <div class="caption">
+                                    <h3 class="title"><span>說明事項</span></h3>
+                                    <ul>
+                                        <li>...</li>
+                                        <li>...</li>
+                                        <li>...</li>
+                                    </ul>
+                                </div>
+                                </div>
+                                <!-- 3 -->
+                                <b class="applicant">申請人 3：張三毛</b>
+                                <div class="cardInfo">
+                                <!-- 說明事項 -->
+                                <div class="caption">
+                                    <h3 class="title"><span>說明事項</span></h3>
+                                    <ul>
+                                        <li>...</li>
+                                        <li>...</li>
+                                        <li>...</li>
+                                    </ul>
+                                </div>
+                                </div>
+                                <!-- 4 -->
+                                <b class="applicant">申請人 4：張四毛</b>
+                                <div class="cardInfo">
+                                <!-- 說明事項 -->
+                                <div class="caption">
+                                    <h3 class="title"><span>說明事項</span></h3>
+                                    <ul>
+                                        <li>...</li>
+                                        <li>...</li>
+                                        <li>...</li>
+                                    </ul>
+                                </div>
+                                </div>
                             </div>
-                            <!-- 2 -->
-                            <b class="applicant">申請人 2：張二毛</b>
-                            <div class="cardInfo">
-                              <!-- 說明事項 -->
-                              <div class="caption">
-                                  <h3 class="title"><span>說明事項</span></h3>
-                                  <ul>
-                                      <li>...</li>
-                                      <li>...</li>
-                                      <li>...</li>
-                                  </ul>
-                              </div>
+                            <!-- 按鈕 -->
+                            <div class="btn_grp">
+                                <button type="button" class="btn btn-secondary">查詢/變更/取消</button>
+                                <button type="button" class="btn btn-primary">列印此頁</button>
                             </div>
-                            <!-- 3 -->
-                            <b class="applicant">申請人 3：張三毛</b>
-                            <div class="cardInfo">
-                              <!-- 說明事項 -->
-                              <div class="caption">
-                                  <h3 class="title"><span>說明事項</span></h3>
-                                  <ul>
-                                      <li>...</li>
-                                      <li>...</li>
-                                      <li>...</li>
-                                  </ul>
-                              </div>
-                            </div>
-                            <!-- 4 -->
-                            <b class="applicant">申請人 4：張四毛</b>
-                            <div class="cardInfo">
-                              <!-- 說明事項 -->
-                              <div class="caption">
-                                  <h3 class="title"><span>說明事項</span></h3>
-                                  <ul>
-                                      <li>...</li>
-                                      <li>...</li>
-                                      <li>...</li>
-                                  </ul>
-                              </div>
-                            </div>
-                          </div>
-                          <!-- 按鈕 -->
-                          <div class="btn_grp">
-                              <button type="button" class="btn btn-secondary">查詢/變更/取消</button>
-                              <button type="button" class="btn btn-primary">列印此頁</button>
-                          </div>
                         </section>
                         <!-- End -->
                     </div>
