--- a/p_login.htm
+++ b/p_login.htm
@@ -64,8 +64,9 @@
                         <div class="pin_panel">
                             <button type="button" class="btn btn-submit">我要預約</button>
                             <div class="btn_grp form_inline">
-                                <button type="button" class="btn btn-normal2">查詢預約人數</button>
-                                <button type="button" class="btn btn-normal2">我要修改預約資料</button>
+                                <button type="button" class="btn btn-normal3">申辦流程說明</button>
+                                <button type="button" class="btn btn-submit">修改預約資料</button>
+                                <button type="button" class="btn btn-submit">預約狀態查詢</button>
                             </div>
                         </div>
                         <!-- 說明事項 -->
